--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "papaparse": "^5.4.1",
+    "proxy-chain": "^2.3.0",
     "puppeteer": "^19.11.1"
   }
 }
