--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "papaparse": "^5.4.1",
     "proxy-chain": "^2.3.0",
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^19.11.1",
+    "puppeteer-page-proxy": "^1.3.0"
   }
 }
